build/gateway-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: gateway-app
  template:
    metadata:
      labels:
        run: gateway-app
    spec:
      containers:
        - image: hiteshpattanayak/gateway-app:1.0
          imagePullPolicy: IfNotPresent
          name: gateway-app
          ports:
            - containerPort: 9092
