build/gateway-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: gateway-svc
  name: gateway-svc
  namespace: default
spec:
  ports:
    - name: gateway
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: gateway-app
  type: LoadBalancer
